# ChangeLog for sys-apps/less
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.112 2009/09/30 17:23:49 klausman Exp $

  30 Sep 2009; Tobias Klausmann <klausman@gentoo.org> less-436.ebuild:
  Stable on alpha, bug #284566

  25 Sep 2009; Brent Baude <ranger@gentoo.org> less-436.ebuild:
  Marking less-436 ppc64 for bug 284566

  22 Sep 2009; Tiago Cunha <tcunha@gentoo.org> less-436.ebuild:
  stable sparc, bug 284566

  19 Sep 2009; nixnut <nixnut@gentoo.org> less-436.ebuild:
  ppc stable #284566

  15 Sep 2009; Jeroen Roovers <jer@gentoo.org> less-436.ebuild:
  Stable for HPPA (bug #284566).

  13 Sep 2009; Markus Meier <maekke@gentoo.org> less-436.ebuild:
  arm/x86 stable, bug #284566

  12 Sep 2009; Richard Freeman <rich0@gentoo.org> less-436.ebuild:
  amd64 stable - 284566

*less-436 (22 Jul 2009)

  22 Jul 2009; Mike Frysinger <vapier@gentoo.org> +less-436.ebuild:
  Version bump #274053 by Klaus Kusche.

  15 Jul 2009; nixnut <nixnut@gentoo.org> less-429.ebuild:
  ppc stable #273794

  19 Jun 2009; Brent Baude <ranger@gentoo.org> less-429.ebuild:
  stable ppc64, bug 273794

  17 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org> less-429.ebuild:
  stable amd64, bug 273794

  16 Jun 2009; Raúl Porcel <armin76@gentoo.org> less-429.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #273794

  12 Jun 2009; Jeroen Roovers <jer@gentoo.org> less-429.ebuild:
  Stable for HPPA (bug #273794).

  12 Jun 2009; Christian Faulhammer <fauli@gentoo.org> less-429.ebuild:
  stable x86, bug 273794

  12 Jun 2009; Ferris McCormick <fmccor@gentoo.org> less-429.ebuild:
  Sparc stable, Bug #273794.

*less-429 (11 Apr 2009)

  11 Apr 2009; Mike Frysinger <vapier@gentoo.org> +less-429.ebuild:
  Version bump.

*less-424 (09 Feb 2009)

  09 Feb 2009; Mike Frysinger <vapier@gentoo.org> +less-424.ebuild:
  Version bump.

  02 Feb 2009; Mike Frysinger <vapier@gentoo.org> files/lesspipe.sh: