@@ -1,15 +1,9 @@
 AUX README.Gentoo 823 RMD160 be59c37906fca17fa25f6781d3f5e7abc114dc57 SHA1 5a1f126af728f5220b97623050e2f9b1ea5ae58e SHA256 3985fd1810f660ea1c1f2732f719b069b6934d62d8d9e8a09287e63f049ba27d
 AUX code2color.patch 1110 RMD160 712f7b79c94f92ee62825d5f53627f18fae693d2 SHA1 a82f937f3a923b52adc4f14cfc9b641903884839 SHA256 a3887126826ef0b4b821bd97cf4e7abfc8b1c9280bf2bb18a2a4cec9a2973936
 AUX less.envd 50 RMD160 e9d7b2497aa81e13b740dc765c0fc87d4f1f2f8e SHA1 f903d459e7f0b2c14009304bebb7a045a7cccf9d SHA256 1f186ac4f500c842a9016702b3d7e9d69fe161db23cf56c316ed7f5a51da6a4e
-AUX lesspipe.sh 6966 RMD160 0101ee8ceea57e5c31e1e38cf417e47bcc5f8a78 SHA1 8142b1755bd545be21b42eda0c966c8fb7d2ec0d SHA256 d3e2d7c7f97cd2ff6ccdadea20d1fc5591dbbd17ac7c6757249ecfc2c4ac68a4
+AUX lesspipe.sh 7048 RMD160 29baa05c86fc700b6b23a7858f61c9a1639766d0 SHA1 150e512336ba1c8fdb969f701da40948a173939e SHA256 724bea7025997623922861cc061b263947cb8cabd1d9b42fa0425ead4fcd46d9
 DIST code2color 199875 RMD160 378d340a20c3fe500f19116220d54816fe279225 SHA1 b30526dd52c747b8bd6dcf53cf5cc94824c47feb SHA256 ce63f148293a81b0fe5e072f33285f9bf4f1d832f64b23a2220519674a47091d
-DIST less-418.tar.gz 299213 RMD160 a10402aa423e3d3c4d950735208991d7d4afb85d SHA1 ec4fb48680878a7ac3499c46564c47c448b0aa22 SHA256 f532fcd61b012379d3258196a8588fd9d51ecdfb5c795485ab2f78d439b103b4
-DIST less-424.tar.gz 301027 RMD160 00e104a3ea04f6d7ba4d3a4fe9e4941ce52f897a SHA1 4072a7ff14deea15db9d177c781049ca9631a42d SHA256 30013dc34d37563e2d756fae6c6ff1009ea5af66d1b216d9906248073c02ea56
-DIST less-429.tar.gz 303463 RMD160 4f476154f463d3e5a003ff12c9784f303365d04a SHA1 78a2fd4777918d0f551236bd7872d84b9129a7d1 SHA256 d3073eceb3c9314d1fab7df92a39d1aea4782db4cafa982ea670cd2f6c713408
 DIST less-436.tar.gz 303921 RMD160 b186b76fcdbf38056b32fbc1b54877dccf64a8ec SHA1 f78998a1a79a7e1962c901dd41bdc3d1c2005471 SHA256 57a16ff07431a9af45cf1cd5b374e1066d019304219f0d156e22bb8c4d6734d2
-EBUILD less-418.ebuild 1593 RMD160 5844e0578cade92a94056ec9f9239a9fc601cc15 SHA1 3d12033fecc42df7489658f60ee320f59dbec9a2 SHA256 c21b9ca62e4c84bcb4af07527676de28bdc054a3bad66896ba2835bbbc0d0177
-EBUILD less-424.ebuild 1607 RMD160 cb38fb285f3476d09cff94724651670f0ad0e782 SHA1 f38605bf56630534dcd1d45aa8b8192c4bffedce SHA256 128c26a8ef18271cdfdc877ed73018f21052c28be60f5d183a1028e3bdefeb22
-EBUILD less-429.ebuild 1618 RMD160 572fddd75ce9a5c23cc41d7f72ee6feeb136de7d SHA1 e9e7683a2dab56f75af10290b9327a757bc14036 SHA256 eaeedecaca7226482eb7f3df8f0cbdd27227e1354512499b35e6a4e2cfa484f9
-EBUILD less-436.ebuild 1620 RMD160 f629e99d578772efde294b219a1a8453b13d19c1 SHA1 66c40a0a352c0cdca98ee1ab8fc59413327a38fc SHA256 33773ae349358f1ef2be2f421f46c6198fe28919175403882ce34abefca63d80
-MISC ChangeLog 13153 RMD160 657cd6dbc2e90bf2008430d92ccfff97654f8669 SHA1 35484f5176152df9eef23b48895a907a79a5f860 SHA256 a63317d329260014f3e0ba0c9670d3e53f771b0b2f7aa7deebd6ac62b37b9540
+EBUILD less-436.ebuild 1617 RMD160 6680f6098d9ac26075d342c1ba402df8162ba66a SHA1 94ddab08c241536911babba78d9c91016f7c7f18 SHA256 75ed0d93194c0ce333787a499c35d8273c99c48cd478511113bc6fd56c76250f
+MISC ChangeLog 13361 RMD160 5568e5c5db7448de7d3c8864c6772668ba6944d1 SHA1 108bb66ac44797e06c04c3f0b57aa0fb31a50f85 SHA256 a289c15dba734271e6f388b01b99c3e81a7054b20a8ee8e9e6f07b884fc8fbf2
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
