@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/less-436.ebuild,v 1.8 2009/09/30 17:23:49 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/less-436.ebuild,v 1.10 2010/01/10 17:47:11 ulm Exp $
 
 inherit eutils
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://www.greenwoodsoftware.com/less/"
 SRC_URI="http://www.greenwoodsoftware.com/less/${P}.tar.gz
 	http://www-zeuthen.desy.de/~friebel/unix/less/code2color"
 
-LICENSE="|| ( GPL-3 less )"
+LICENSE="|| ( GPL-3 BSD-2 )"
 SLOT="0"
 KEYWORDS="~ppc-aix ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE="unicode"
