@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/less
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.112 2009/09/30 17:23:49 klausman Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/less/ChangeLog,v 1.114 2010/01/10 17:47:11 ulm Exp $
+
+  10 Jan 2010; Ulrich Mueller <ulm@gentoo.org> less-436.ebuild:
+  Fix LICENSE, less is the same as BSD-2.
+
+  07 Oct 2009; Raúl Porcel <armin76@gentoo.org> less-436.ebuild:
+  ia64/m68k/s390/sh stable wrt #284566
 
   30 Sep 2009; Tobias Klausmann <klausman@gentoo.org> less-436.ebuild:
   Stable on alpha, bug #284566
